image-updater/examples/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-image-updater
spec:
  ingressClassName: nginx
  rules:
  - host: demo-app-image-updater-192.168.0.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-image-updater
            port:
              number: 3000
